<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8sp"
            android:paddingVertical="8dp"
            android:text="@string/txt_full_name"
            android:textColor="#1B1D29"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/txt_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit"
            android:hint="Nhập nơi thường trú"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8sp"
            android:paddingVertical="8dp"
            android:text="@string/txt_date_of_birth"
            android:textColor="#1B1D29"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/txt_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit"
            android:hint="Nhập nơi thường trú"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8sp"
            android:paddingVertical="8dp"
            android:text="@string/txt_gender"
            android:textColor="#1B1D29"
            android:textSize="13sp" />

        <RadioGroup
            android:id="@+id/rg_select_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Nam"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/rb_girl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Nữ"
                android:textSize="13sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8sp"
            android:paddingVertical="8dp"
            android:text="@string/txt_user_identity"
            android:textColor="#1B1D29"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/txt_identity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit"
            android:hint="Nhập nơi thường trú"
            android:inputType="number"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:lineSpacingExtra="8sp"
                    android:paddingVertical="8dp"
                    android:text="@string/txt_date_issuing_identity"
                    android:textColor="#1B1D29"
                    android:textSize="13sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_edit"
                    android:hint="Nhập nơi thường trú"
                    android:inputType="date"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:lineSpacingExtra="8sp"
                    android:paddingVertical="8dp"
                    android:text="@string/txt_date_exp"
                    android:textColor="#1B1D29"
                    android:textSize="13sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_edit"
                    android:hint="Nhập nơi thường trú"
                    android:inputType="date"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="13sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8sp"
            android:paddingVertical="8dp"
            android:text="@string/txt_locale_issuing"
            android:textColor="#1B1D29"
            android:textSize="13sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit"
            android:hint="Nhập nơi thường trú"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8sp"
            android:paddingVertical="8dp"
            android:text="@string/txt_domicile_original"
            android:textColor="#1B1D29"
            android:textSize="13sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit"
            android:hint="Nhập nơi thường trú"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8sp"
            android:paddingVertical="8dp"
            android:text="@string/txt_domicile"
            android:textColor="#1B1D29"
            android:textSize="13sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit"
            android:hint="Nhập nơi thường trú"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_text_alert"
            android:drawableLeft="@drawable/ic_danger"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:text="@string/card_capture_alert_1"
            android:textColor="@color/color_inline_message_warning" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_primary"
            android:text="@string/confirm" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>